B&L QA/objects/BL_Sales_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>B&amp;L Sales Histories</relationshipLabel>
        <relationshipName>B_L_Sales_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>B&amp;L Sales Histories</relationshipLabel>
        <relationshipName>B_L_Sales_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Date__c</fullName>
        <label>Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Laser Probe</fullName>
                </value>
                <value>
                    <fullName>DDMS</fullName>
                </value>
                <value>
                    <fullName>Soft tip</fullName>
                </value>
                <value>
                    <fullName>Sil OIL</fullName>
                </value>
                <value>
                    <fullName>Pinnacle</fullName>
                </value>
                <value>
                    <fullName>Eq Disposable</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>IOL</fullName>
                </value>
                <value>
                    <fullName>OVD</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>Custom Pack</fullName>
                </value>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Trulign</fullName>
                </value>
                <value>
                    <fullName>EnVista</fullName>
                </value>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>CTR</fullName>
                </value>
                <value>
                    <fullName>Cap Guard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>B&amp;L Sales History</label>
    <nameField>
        <displayFormat>BL-SALES-{0000000000}</displayFormat>
        <label>B&amp;L Sales History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B&amp;L Sales Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>